added ability to lower dutch price and edit item, fixed search page

--- a/Bezos/src/main/webapp/Main.html
+++ b/Bezos/src/main/webapp/Main.html
@@ -71,9 +71,9 @@
                 <p>Add Item for Sale</p>
             </div>
         </a>
-        <a href="NewItem.html">
+        <a href="MyItems.html">
             <div class="blackButton">
-                <p>Account Balance</p>
+                <p>My Items</p>
             </div>
         </a>
     </div>
