--- a/Bezos/src/main/webapp/item.html
+++ b/Bezos/src/main/webapp/item.html
@@ -36,7 +36,7 @@
 
 			<form action="ItemServlet" method="post" autocomplete="off">
 				<label for="numberInput">Bid Amount:</label>
-				<input type="number" id="numberInput" name="amount" pattern="^\d*(\.\d{0,2})?$" step="any" min="0" required>
+				<input type="number" id="numberInput" name="amount" pattern="^\d*(\.\d{0,2})?$" step="any" min="0">
 				<input type="hidden" id="itemId" name="itemId" value="">
 				<input type="hidden" id="auctionTypeHidden" name="auctionTypeHidden" value="">
 				<input type="submit" value="Bid">
@@ -49,6 +49,30 @@
 </body>
 
 <script>
+	// Function to set the default value of bid amount to currentPrice
+    function setDefaultBidAmount() {
+        // Get the current price from the span element
+        var currentPrice = document.getElementById("currentPrice").innerText;
+
+        // Set the default value of the bid amount input field to currentPrice
+        document.getElementById("numberInput").value = currentPrice;
+    }
+
+    // Call setDefaultBidAmount when the page loads
+    window.addEventListener('load', setDefaultBidAmount);
+	
+	// Function to set the value of auctionTypeHidden based on the displayed auction type
+    function setAuctionTypeHidden() {
+        // Gets the auction type from the span element
+        var auctionType = document.getElementById("auctionType").innerText;
+
+        // Sets the value of the hidden field based on the auction type
+        document.getElementById("auctionTypeHidden").value = auctionType;
+    }
+
+    // Call setAuctionTypeHidden when the form is submitted
+    document.querySelector('form').addEventListener('submit', setAuctionTypeHidden);
+	
 	function getQueryParam(param) {
 		var urlParams = new URLSearchParams(window.location.search);
 		return urlParams.get(param);
