--- a/Bezos/src/main/webapp/NewItem.html
+++ b/Bezos/src/main/webapp/NewItem.html
@@ -156,6 +156,7 @@
 				<select name="auctionType" id="auctionType" required>
 					<option value="forward">Forward</option>
 					<option value="dutch">Dutch</option>
+					<option value="japanese">Japanese</option>
 				</select>
 
 				<label for="description">Description</label>
