--- a/Bezos/src/main/webapp/AuctionEnd.html
+++ b/Bezos/src/main/webapp/AuctionEnd.html
@@ -90,7 +90,9 @@
 					document.getElementById("itemId").value = item.id;
 
 					document.getElementById("currentPrice").innerText = item.cost;
+					console.log(item.cost);
 					document.getElementById("bidder").innerText = item.bidderUsername;
+					console.log(item.bidderUsername);
 
 					var table = $("#itemTable");
 
