--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -65,39 +65,46 @@
 
 	<script>
 		function getItems() {
-			var inputValue = document.getElementById("search").value;
-			var u = "http://localhost:8080/Bezos/api/item/getAllBids/" + inputValue;
-			if (inputValue == null || inputValue == "") {
-				u = "http://localhost:8080/Bezos/api/item/getAllBids";
-			}
-			$.ajax({
-				url: u,
-				type: 'GET',
-				success: function (result) {
-					var table = $("#myTable");
-					var tbody = table.find("tbody");
-					tbody.empty();
-					result.forEach(function (item) {
-						table.append()
-						var row = $("<tr></tr>");
-						row.append($("<td></td>").text(item.name));
-						row.append($("<td></td>").text(item.cost));
-						row.append($("<td></td>").text(item.type));
-						row.append($("<td id = \"remainingTime\"></td>").text(item.remainingTime));
-						row.append($("<td></td>").text(item.description));
-						row.append($("<td></td>").text(item.sellerUsername));
-						row.append($("<td></td>").text(item.bidderUsername));
-						row.append($("<td></td>").text(item.shipping));
-						row.append($("<td><input type=\"radio\" id=\"" + item.id + "\" name=\"item\" value=\"" + item.id + "\"></td>"));
-						tbody.append(row);
-					});
-				},
-				error: function (error) {
-					console.log(error);
-				}
-			});
-
+		    var inputValue = document.getElementById("search").value;
+		    var u = "http://localhost:8080/Bezos/api/item/getAllBids/" + inputValue;
+		    if (inputValue == null || inputValue == "") {
+		        u = "http://localhost:8080/Bezos/api/item/getAllBids";
+		    }
+		    $.ajax({
+		        url: u,
+		        type: 'GET',
+		        success: function (result) {
+		            var table = $("#myTable");
+		            var tbody = table.find("tbody");
+		            tbody.empty();
+		            result.forEach(function (item) {
+		                var row = $("<tr></tr>");
+		                row.append($("<td></td>").text(item.name));
+		                if ((item.bidderUsername == null || item.bidderUsername === "") && item.remainingTime > 0) {
+		                    // If bidderUsername is null or empty, use item.cost
+		                    row.append($("<td id=\"incrementalCost\"></td>").text(item.incrementalCost));
+		                } else if ((item.bidderUsername == null || item.bidderUsername === "") && item.remainingTime == 0){
+					        row.append($("<td id=\"incrementalCost\"></td>").text(item.cost));
+						} else{
+		                    // If bidderUsername is not null or empty, use item.incrementalCost
+		                    row.append($("<td id=\"incrementalCost\"></td>").text(item.cost));
+		                }
+		                row.append($("<td></td>").text(item.type));
+		                row.append($("<td id=\"remainingTime\"></td>").text(item.remainingTime));
+		                row.append($("<td></td>").text(item.description));
+		                row.append($("<td></td>").text(item.sellerUsername));
+		                row.append($("<td></td>").text(item.bidderUsername));
+		                row.append($("<td></td>").text(item.shipping));
+		                row.append($("<td><input type=\"radio\" id=\"" + item.id + "\" name=\"item\" value=\"" + item.id + "\"></td>"));
+		                tbody.append(row);
+		            });
+		        },
+		        error: function (error) {
+		            console.log(error);
+		        }
+		    });
 		}
+
 	</script>
 
 	<script>
@@ -190,7 +197,17 @@
 					if (remainingTime > 0) {
 						element.innerText = remainingTime - 1;
 					}
-			    }
+			    }else if (auctionType.innerText.trim().toLowerCase() === "japanese" && (bidder.innerText.trim() === "")) {
+					if (remainingTime > 0) {
+						element.innerText = remainingTime - 1;
+						currentPriceCell.innerText = currentPrice + 1;
+					}
+			    }else if (auctionType.innerText.trim().toLowerCase() === "japanese" && !(bidder.innerText.trim() === "")) {
+					if (remainingTime > 0) {
+						remainingTime = 0;
+						currentPriceCell.innerText = currentPrice;
+					}
+				}
 			    
 			}
 
@@ -212,8 +229,7 @@
 		window.addEventListener('pageshow', recalibrate);
 		window.addEventListener('popstate', recalibrate);
 		
-		
-		
+		 
 	</script>
 
 
