--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -180,8 +180,6 @@
 				var currentPriceCell = row.cells[1];
 				var element = row.cells[3];
 				var bidder = row.cells[6];
-				var id = row.getElementsByTagName("td").cells[8].querySelector('input[type="radio"]').value;
-				console.log(id);
 				var remainingTime = parseInt(element.innerText, 10);
 
 
