--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -197,6 +197,14 @@
 					if (remainingTime > 0) {
 						element.innerText = remainingTime - 1;
 					}
+				} else if (auctionType.innerText.trim().toLowerCase() === "dutch" && !(bidder.innerText.trim() === "")) {
+					element.innerText = "Sold";
+				} else if (auctionType.innerText.trim().toLowerCase() === "dutch" && currentPrice > 5) {
+					element.innerText = "Now";
+				} else if (auctionType.innerText.trim().toLowerCase() === "dutch" && currentPrice <= 5) {
+					if (remainingTime > 0) {
+						element.innerText = remainingTime - 1;
+					}
 				} else if (auctionType.innerText.trim().toLowerCase() === "japanese" && (bidder.innerText.trim() === "")) {
 					if (remainingTime > 0) {
 						element.innerText = remainingTime - 1;
@@ -206,13 +214,6 @@
 					if (remainingTime > 0) {
 						element.innerText = 0;
 						currentPriceCell.innerText = currentPrice;
-					}
-				} else if (auctionType.innerText.trim().toLowerCase() === "dutch" && currentPrice > 5) {
-					element.innerText = "Now";
-
-				} else if (auctionType.innerText.trim().toLowerCase() === "dutch" && currentPrice <= 5) {
-					if (remainingTime > 0) {
-						element.innerText = remainingTime - 1;
 					}
 				}
 
@@ -235,28 +236,6 @@
 
 		window.addEventListener('pageshow', recalibrate);
 		window.addEventListener('popstate', recalibrate);
-
-
-		function getCost(id) {
-			var u = "http://localhost:8080/Bezos/api/item/" + id;
-
-			var item;
-			$.ajax({
-				url: u,
-				type: 'GET',
-				success: function (result) {
-
-					item = result.cost
-				},
-				error: function (error) {
-					console.log(error);
-				}
-			});
-
-			return item;
-
-		}
-
 
 
 	</script>
