--- a/Bezos/src/main/webapp/shipping.html
+++ b/Bezos/src/main/webapp/shipping.html
@@ -145,7 +145,7 @@
 <body>
 	<header>
 		<h1>BEZOS</h1>
-		<button onclick="window.location.href='Receipt.jsp'" class="back-button">BACK</button>
+		<button onclick="window.location.href='Main.html'" class="back-button">BACK to Main Page</button>
 	</header>
 
 	<div class="container">
