Changed project title

--- a/Bezos/src/main/webapp/AuctionEnd.html
+++ b/Bezos/src/main/webapp/AuctionEnd.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bezos - Auction Ended</title>
+	<title>BidMax - Auction Ended</title>
 	<link rel="stylesheet" href="styles/AuctionEndStyle.css">
 	<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
 
 	<header>
-		<h1>BEZOS</h1>
+		<h1>BidMax</h1>
 		<button onclick="window.location.href='Search.html'" class="back-button">BACK</button>
 	</header>
 	<div class="container">
