--- a/Bezos/src/main/webapp/Login.html
+++ b/Bezos/src/main/webapp/Login.html
@@ -103,7 +103,7 @@
 </head>
 <body>
     <header>
-        <h1>BEZOS</h1>
+        <h1>BidMax</h1>
 		<button onclick="window.location.href='Welcome.html'" class="back-button">BACK</button>
 
     </header>
