--- a/Bezos/src/main/webapp/Main.html
+++ b/Bezos/src/main/webapp/Main.html
@@ -48,7 +48,7 @@
 
 <body>
     <header>
-        <h1>BEZOS</h1>
+        <h1>BidMax</h1>
         <!-- Add an element to display the username -->
         <p id="usernameDisplay"></p>
         <button id="logoutButton" class="back-button" onclick="window.location.href='Welcome.html'">Logout</button>
