--- a/Bezos/src/main/webapp/NewItem.html
+++ b/Bezos/src/main/webapp/NewItem.html
@@ -136,7 +136,7 @@
 
 <body>
 	<header>
-		<h1>BEZOS</h1>
+		<h1>BidMax</h1>
 		<button onclick="window.location.href='Main.html'" class="back-button">BACK</button>
 		<h2>New Item for Auction</h2>
 	</header>
