--- a/Bezos/src/main/webapp/Welcome.html
+++ b/Bezos/src/main/webapp/Welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Bezos</title>
+    <title>Welcome to BidMax</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -102,11 +102,11 @@
 </head>
 <body>
     <header>
-        <h1>BEZOS</h1>
+        <h1>BidMax</h1>
     </header>
     <div class="flex-container">
         <div class="left">
-            <h2>Welcome To BEZOS Auctions!</h2>
+            <h2>Welcome To BidMax Auctions!</h2>
             <p>Turning Bids into Treasures!</p>
         </div>
         <div class="right">
