--- a/Bezos/src/main/webapp/MyItems.html
+++ b/Bezos/src/main/webapp/MyItems.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bezos - Search Page</title>
+	<title>BidMax - Search Page</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="styles/SearchStyle.css">
@@ -14,7 +14,7 @@
 
 <body>
 	<header>
-		<h1>BEZOS</h1>
+		<h1>BidMax</h1>
 		<button onclick="window.location.href='Main.html'" class="back-button">BACK</button>
 	</header>
 
