--- a/Bezos/src/main/webapp/Signup.html
+++ b/Bezos/src/main/webapp/Signup.html
@@ -122,7 +122,7 @@
 </head>
 <body>
 	<header>
-            <h1>BEZOS</h1>
+            <h1>BidMax</h1>
             <button onclick="window.location.href='Welcome.html'" class="back-button">BACK</button>
             <h2>REGISTRATION</h2>
      </header>
