--- a/Bezos/src/main/webapp/item.html
+++ b/Bezos/src/main/webapp/item.html
@@ -14,7 +14,7 @@
 <body>
 
 	<header>
-		<h1>BEZOS</h1>
+		<h1>BidMax</h1>
 		<!-- Add an element to display the username -->
 		<p id="usernameDisplay"></p>
 		<button onclick="window.location.href='Search.html'" class="back-button">BACK</button>
